Customize the demo text.

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 
 <div class="wrapper">
 
-    <h1>Capital Framework demo page</h1>
+    <h1>cfgov-refresh demo page.</h1>
 
     <ul class="feature-list">
 
