Reworks file and directory structure.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 -->
 
 <!--[if lt IE 9]>
-    <script src="vendor/html5shiv/html5shiv-printshiv.js"></script>
+    <script src="static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
 <![endif]-->
 
     <script>
@@ -70,8 +70,8 @@
         <h2>Table of Contents</h2>
 
         <ul>
-            <li><a href="blog-landing.html">Blog landing page</a></li>
-            <li><a href="blog-entry.html">Blog entry page</a></li>
+            <li><a href="blog/landing.html">Blog landing page</a></li>
+            <li><a href="blog/entry.html">Blog entry page</a></li>
         </ul>
 
     </div><!-- END .wrapper -->
