Adds legacssy and an ie alternate stylesheet.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     specific to a single page or section of the site, all new styles should be added to src/static/css/main.less.
 -->
 
-<!--[if lt IE 9]>      <link rel="stylesheet" href="static/css/ie8.min.css"> <![endif]-->
+<!--[if lt IE 9]>      <link rel="stylesheet" href="static/css/main.ie.min.css"> <![endif]-->
 <!--[if gt IE 8]><!--> <link rel="stylesheet" href="static/css/main.min.css"> <!--<![endif]-->
 
 <!--
