Renames entry to post, fixes some typos in docs.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <ul>
             <li><a href="blog/landing.html">Blog landing page</a></li>
-            <li><a href="blog/entry.html">Blog entry page</a></li>
+            <li><a href="blog/post.html">Blog post page</a></li>
         </ul>
 
     </div><!-- END .wrapper -->
