Improving layout classes
This update makes it so that switching between our two main layouts as
simple as switching a class, and adding the bleeding background style as
simple as adding the (now shorter-named) `bleedbar` class.

--- a/newsroom/landing.html
+++ b/newsroom/landing.html
@@ -22,8 +22,8 @@
     ==================
 -->
 
-    <title>Blog landing page - cfgov-refresh demo</title>
-    <meta name="description" content="Blog landing page prototyping for the consumerfinance.gov refresh">
+    <title>Newsroom landing page - cfgov-refresh demo</title>
+    <meta name="description" content="Newsroom landing page prototyping for the consumerfinance.gov refresh">
 
     <!-- Explicit favicon link needed for testing. Remove for production. -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -65,7 +65,7 @@
 
     <div class="demo-banner">
         <a class="demo-banner_back-link" href="../index.html"><i class="cf-icon cf-icon-left"></i> Back to demo home</a>
-        cfgov-refresh demo: <b>Blog landing page</b>
+        cfgov-refresh demo: <b>Newsroom landing page</b>
     </div>
 
 
@@ -75,11 +75,11 @@
         </div>
     </header><!-- END header.wrapper -->
 
-    <main id="main" class="main bleedbar" role="main">
+    <main id="main" class="main" role="main">
         <section class="hero">
             <div class="demo-placeholder">hero placeholder</div>
         </section>
-        <div class="content-wrapper wrapper content-wrapper__2-1 bleedbar_bg">
+        <div class="content-wrapper wrapper content-wrapper__1-3">
             <section class="content">
                 <div class="filters">
                     <div class="demo-placeholder">filters placeholder</div>
@@ -183,7 +183,7 @@
                     <div class="demo-placeholder">pagination placeholder</div>
                 </nav>
             </section><!-- END .content -->
-            <aside class="sidebar bleedbar_fg">
+            <aside class="sidebar">
                 <section class="popular-stories">
                     <div class="demo-placeholder">popular stories placeholder</div>
                 </section>
