--- a/newsroom/landing.html
+++ b/newsroom/landing.html
@@ -75,11 +75,11 @@
         </div>
     </header><!-- END header.wrapper -->
 
-    <main id="main" class="main" role="main">
+    <main class="main" id="main" role="main">
         <section class="hero">
             <div class="demo-placeholder">hero placeholder</div>
         </section>
-        <div class="content-wrapper wrapper content-wrapper__1-3">
+        <div class="content-wrapper content-wrapper__1-3 wrapper">
             <section class="content">
                 <div class="filters">
                     <div class="demo-placeholder">filters placeholder</div>
