Better naming and other stuff
- Mo betta naming following discussion yesterday
- Ensures small-tablet-plus layouts have 30px page margin
- Makes demo-banner more distinct from the rest of the page, improves
  its layout at narrow widths.

--- a/newsroom/landing.html
+++ b/newsroom/landing.html
@@ -64,8 +64,10 @@
 <body>
 
     <div class="demo-banner">
-        <a class="demo-banner_back-link" href="../index.html"><i class="cf-icon cf-icon-left"></i> Back to demo home</a>
         cfgov-refresh demo: <b>Newsroom landing page</b>
+        <a class="demo-banner_back-link" href="../index.html">
+            <i class="cf-icon cf-icon-left"></i> Back to demo home
+        </a>
     </div>
 
 
@@ -73,14 +75,16 @@
         <div class="wrapper">
             <div class="demo-placeholder">header placeholder</div>
         </div>
-    </header><!-- END header.wrapper -->
+    </header><!-- END .header -->
 
-    <main class="main" id="main" role="main">
-        <section class="hero">
-            <div class="demo-placeholder">hero placeholder</div>
+    <main class="content content__1-3" id="main" role="main">
+        <section class="content_hero">
+            <div class="wrapper">
+                <div class="demo-placeholder">hero placeholder</div>
+            </div>
         </section>
-        <div class="content-wrapper content-wrapper__1-3 wrapper">
-            <section class="content">
+        <div class="wrapper content_wrapper">
+            <section class="content_main">
                 <div class="filters">
                     <div class="demo-placeholder">filters placeholder</div>
                 </div>
@@ -92,7 +96,7 @@
                         </span>
                         <a href="#" class="category-slug meta-header_heading">
                             <i class="cf-icon cf-icon-help"></i>
-                            Announcements & updates
+                            Announcements &amp; updates
                         </a>
                     </div>
                     <div class="summary">
@@ -156,7 +160,7 @@
                         </span>
                         <a href="#" class="category-slug meta-header_heading">
                             <i class="cf-icon cf-icon-help"></i>
-                            Innovation & data
+                            Innovation &amp; data
                         </a>
                     </div>
                     <div class="media-object">
@@ -182,26 +186,20 @@
                 <nav class="pagination">
                     <div class="demo-placeholder">pagination placeholder</div>
                 </nav>
-            </section><!-- END .content -->
-            <aside class="sidebar">
-                <section class="popular-stories">
-                    <div class="demo-placeholder">popular stories placeholder</div>
-                </section>
-                <section class="related-links">
-                    <div class="demo-placeholder">related links placeholder</div>
-                </section>
-                <section class="stay-informed">
-                    <div class="demo-placeholder">stay informed placeholder</div>
-                </section>
-            </aside><!-- END .sidebar -->
-        </div><!-- END .wrapper -->
-    </main><!-- END main -->
+            </section><!-- END .content_main -->
+            <aside class="content_sidebar">
+                <nav class="secondary-nav">
+                    <div class="demo-placeholder">secondary nav placeholder</div>
+                </nav>
+            </aside><!-- END .content_sidebar -->
+        </div><!-- END .content_wrapper -->
+    </main><!-- END .content -->
 
     <footer class="footer" role="contentinfo">
         <div class="wrapper">
             <div class="demo-placeholder">footer placeholder</div>
         </div>
-    </footer><!-- END footer.wrapper -->
+    </footer><!-- END .footer -->
 
 <!--
     ============
