Fixes index asset links.

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     specific to a single page or section of the site, all new styles should be added to src/static/css/main.less.
 -->
 
-<!--[if lt IE 9]>      <link rel="stylesheet" href="../static/css/main.ie.min.css"> <![endif]-->
-<!--[if gt IE 8]><!--> <link rel="stylesheet" href="../static/css/main.min.css"> <!--<![endif]-->
+<!--[if lt IE 9]>      <link rel="stylesheet" href="static/css/main.ie.min.css"> <![endif]-->
+<!--[if gt IE 8]><!--> <link rel="stylesheet" href="static/css/main.min.css"> <!--<![endif]-->
 
 <!--
     ============
@@ -50,7 +50,7 @@
 -->
 
 <!--[if lt IE 9]>
-    <script src="../static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
+    <script src="static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
 <![endif]-->
 
     <script>
@@ -174,7 +174,7 @@
     specific to a single page or section of the site, all custom JS should be added to src/static/js/app.js.
 -->
 
-<script src="../static/js/main.min.js"></script>
+<script src="static/js/main.min.js"></script>
 
 </body>
 
