--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     ==================
 -->
 
-    <title>Blog entry page - cfgov-refresh demo</title>
+    <title>cfgov-refresh demos and docs</title>
     <meta name="description" content="Blog entry prototyping for the consumerfinance.gov refresh">
 
     <!-- Explicit favicon link needed for testing. Remove for production. -->
@@ -65,7 +65,7 @@
 
     <header class="header" role="banner">
         <div class="wrapper">
-            <h1 class="demo-col-12 demo-logo">CFGOV-Refresh Front End Development</h1>
+            <h1 class="demo-col-12 demo-logo">cfgov-refresh demos and docs</h1>
         </div>
     </header><!-- END .header -->
 
@@ -76,7 +76,7 @@
                 <section class="demo-cols">
 
                     <div class="demo-col-12 demo-spaced">
-                        <h2>Static pages</h2>
+                        <h2>Static page demos</h2>
                     </div>
                     <div class="demo-col-6 demo-spaced">
                         <div class="meta-header">
