--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 -->
 
     <title>cfgov-refresh demos and docs</title>
-    <meta name="description" content="Blog entry prototyping for the consumerfinance.gov refresh">
+    <meta name="description" content="Demos and docs for the consumerfinance.gov refresh">
 
     <!-- Explicit favicon link needed for testing. Remove for production. -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
