Renames content-blocks to blog-docs.

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                 <div class="demo-spaced">
                     <div class="header-slug">
                         <h3 class="header-slug_inner">
-                            Section patterns
+                            Section docs
                         </h3>
                     </div>
                     <ul class="horizontal-list">
                         <li class="horizontal-list_item">
-                            <a href="docs/content-blocks/">Content blocks</a>
+                            <a href="docs/blog-docs/">Blog docs</a>
                         </li>
                     </ul>
                 </div>
