Renames vars to media-queries and updates mq docs.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <a href="docs/utilities/">Utilities</a>
                         </li>
                         <li class="horizontal-list_item">
-                            <a href="docs/vars/">Vars</a>
+                            <a href="docs/media-queries/">Media queries</a>
                         </li>
                     </ul>
                 </div>
