--- a/index.html
+++ b/index.html
@@ -1,73 +1,9 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+{% extends "base.html" %}
 
-<head>
+{% block title %}Home{% endblock %}
+{% block demo_title %}{% endblock %}
 
-<!--
-    ===========
-    GLOBAL META
-    ===========
--->
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!--
-    ==================
-    PAGE-SPECIFIC META
-    ==================
--->
-
-    <title>cfgov-refresh demos and docs</title>
-    <meta name="description" content="Demos and docs for the consumerfinance.gov refresh">
-
-    <!-- Explicit favicon link needed for testing. Remove for production. -->
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-
-<!--
-    ======
-    STYLES
-    ======
-    The number of stylesheets here must be kept to a minimum. Unless adding a significant amount of CSS that is
-    specific to a single page or section of the site, all new styles should be added to src/static/css/main.less.
--->
-
-<!--[if lt IE 9]>      <link rel="stylesheet" href="static/css/main.ie.min.css"> <![endif]-->
-<!--[if gt IE 8]><!--> <link rel="stylesheet" href="static/css/main.min.css"> <!--<![endif]-->
-
-<!--
-    ============
-    HEAD SCRIPTS
-    ============
-    The following scripts must be included in the head. DO NOT ADD ANY MORE.
-    All other scripts should go before the closing body tag.
-    If you come across a script that makes a convincing case to be included in
-    the head, then file an issue or PR to discuss including it.
--->
-
-<!--[if lt IE 9]>
-    <script src="static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
-<![endif]-->
-
-    <script>
-        // Confirm availability of JS and remove no-js class from html
-        var docElement = document.documentElement;
-        docElement.className = docElement.className.replace(/(^|\s)no-js(\s|$)/, '$1$2');
-    </script>
-
-</head>
-
-<body>
-
-    <header class="header" role="banner">
-        <div class="wrapper">
-            <h1 class="demo-col-12 demo-logo">cfgov-refresh demos and docs</h1>
-        </div>
-    </header><!-- END .header -->
+{% block content %}
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
         <div class="wrapper content_wrapper">
@@ -80,21 +16,21 @@
                     </div>
                     <div class="demo-col-6 demo-spaced">
                         <div class="meta-header">
-                            <a href="blog/landing.html" class="meta-header_left category-slug">
+                            <a href="blog/" class="meta-header_left category-slug">
                                 Blog
                             </a>
                         </div>
-                        <h3><a href="blog/landing.html">Landing page</a></h3>
-                        <h3><a href="blog/post.html">Post</a></h3>
+                        <h3><a href="blog/">Landing page</a></h3>
+                        <h3><a href="blog/consumer_advisory_cosigners">Post</a></h3>
                     </div>
-                    <div class="demo-col-6 demo-spaced">
+                    <!-- <div class="demo-col-6 demo-spaced">
                         <div class="meta-header">
                             <a href="newsroom/landing.html" class="meta-header_left category-slug">
                                 Newsroom
                             </a>
                         </div>
                         <h3><a href="newsroom/landing.html">Landing page</a></h3>
-                    </div>
+                    </div> -->
 
                 </section>
 
@@ -160,22 +96,4 @@
         </div><!-- END .content_wrapper -->
     </main><!-- END .content -->
 
-    <footer class="footer" role="contentinfo">
-        <div class="wrapper">
-            <a href="https://github.com/cfpb/cfgov-refresh">View the GitHub repository</a>
-        </div>
-    </footer><!-- END .footer -->
-
-<!--
-    ============
-    BODY SCRIPTS
-    ============
-    The number of scripts here must be kept to a minimum. Unless adding a significant amount of JS that is
-    specific to a single page or section of the site, all custom JS should be added to src/static/js/app.js.
--->
-
-<script src="static/js/main.min.js"></script>
-
-</body>
-
-</html>
+{% endblock content %}
