Refactors list and share link patterns.

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                             Section docs
                         </h3>
                     </div>
-                    <ul class="horizontal-list">
-                        <li class="horizontal-list_item">
-                            <a href="docs/blog-docs/">Blog docs</a>
+                    <ul class="list list__horizontal">
+                        <li class="list_item">
+                            <a class="list_link" href="docs/blog-docs/">Blog docs</a>
                         </li>
                     </ul>
                 </div>
@@ -122,21 +122,21 @@
                             Global patterns
                         </h3>
                     </div>
-                    <ul class="horizontal-list">
-                        <li class="horizontal-list_item">
-                            <a href="docs/media-object/">Media object</a>
+                    <ul class="list list__horizontal">
+                        <li class="list_item">
+                            <a class="list_link" href="docs/media-object/">Media object</a>
                         </li>
-                        <li class="horizontal-list_item">
-                            <a href="docs/meta/">Meta</a>
+                        <li class="list_item">
+                            <a class="list_link" href="docs/meta/">Meta</a>
                         </li>
-                        <li class="horizontal-list_item">
-                            <a href="docs/misc/">Misc</a>
+                        <li class="list_item">
+                            <a class="list_link" href="docs/misc/">Misc</a>
                         </li>
-                        <li class="horizontal-list_item">
-                            <a href="docs/post/">Post</a>
+                        <li class="list_item">
+                            <a class="list_link" href="docs/post/">Post</a>
                         </li>
-                        <li class="horizontal-list_item">
-                            <a href="docs/summary/">Summary</a>
+                        <li class="list_item">
+                            <a class="list_link" href="docs/summary/">Summary</a>
                         </li>
                     </ul>
                 </div>
@@ -146,12 +146,12 @@
                             Less docs
                         </h3>
                     </div>
-                    <ul class="horizontal-list">
-                        <li class="horizontal-list_item">
-                            <a href="docs/utilities/">Utilities</a>
+                    <ul class="list list__horizontal">
+                        <li class="list_item">
+                            <a class="list_link" href="docs/utilities/">Utilities</a>
                         </li>
-                        <li class="horizontal-list_item">
-                            <a href="docs/media-queries/">Media queries</a>
+                        <li class="list_item">
+                            <a class="list_link" href="docs/media-queries/">Media queries</a>
                         </li>
                     </ul>
                 </div>
