Replaces i tag with span tag for icons.

--- a/newsroom/landing.html
+++ b/newsroom/landing.html
@@ -66,7 +66,7 @@
     <div class="demo-banner">
         cfgov-refresh demo: <b>Newsroom landing page</b>
         <a class="demo-banner_back-link" href="../index.html">
-            <i class="cf-icon cf-icon-left"></i> Back to demo home
+            <span class="cf-icon cf-icon-left"></span> Back to demo home
         </a>
     </div>
 
@@ -95,7 +95,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_heading">
-                            <i class="cf-icon cf-icon-help"></i>
+                            <span class="cf-icon cf-icon-help"></span>
                             Announcements &amp; updates
                         </a>
                     </div>
@@ -112,7 +112,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_heading">
-                            <i class="cf-icon cf-icon-help"></i>
+                            <span class="cf-icon cf-icon-help"></span>
                             Consumer information
                         </a>
                     </div>
@@ -142,7 +142,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_heading">
-                            <i class="cf-icon cf-icon-help"></i>
+                            <span class="cf-icon cf-icon-help"></span>
                             Engagement
                         </a>
                     </div>
@@ -159,7 +159,7 @@
                             Nov 4, 2013
                         </span>
                         <a href="#" class="category-slug meta-header_heading">
-                            <i class="cf-icon cf-icon-help"></i>
+                            <span class="cf-icon cf-icon-help"></span>
                             Innovation &amp; data
                         </a>
                     </div>
