Fixes cat slugs on index page.

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                     <h2>Documentation</h2>
                 </div>
                 <div class="demo-spaced">
-                    <div class="header-slug">
-                        <h3 class="header-slug_inner">
+                    <h3 class="header-slug">
+                        <span class="header-slug_inner">
                             Section docs
-                        </h3>
-                    </div>
+                        </span>
+                    </h3>
                     <ul class="list list__horizontal">
                         <li class="list_item">
                             <a class="list_link" href="docs/blog-docs/">Blog docs</a>
@@ -117,11 +117,11 @@
                     </ul>
                 </div>
                 <div class="demo-spaced">
-                    <div class="header-slug">
-                        <h3 class="header-slug_inner">
+                    <h3 class="header-slug">
+                        <span class="header-slug_inner">
                             Global patterns
-                        </h3>
-                    </div>
+                        </span>
+                    </h3>
                     <ul class="list list__horizontal">
                         <li class="list_item">
                             <a class="list_link" href="docs/media-object/">Media object</a>
@@ -141,11 +141,11 @@
                     </ul>
                 </div>
                 <div class="demo-spaced">
-                    <div class="header-slug">
-                        <h3 class="header-slug_inner">
+                    <h3 class="header-slug">
+                        <span class="header-slug_inner">
                             Less docs
-                        </h3>
-                    </div>
+                        </span>
+                    </h3>
                     <ul class="list list__horizontal">
                         <li class="list_item">
                             <a class="list_link" href="docs/utilities/">Utilities</a>
