--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -139,7 +139,7 @@
                         </div>
                     </header>
                     <div class="post_body">
-                        <aside class="post_inset line-container">
+                        <aside class="post_inset post_inset__right line-container">
                             <div class="line-container_body">
                                 <h3>
                                     Final list of rural and underserved counties
@@ -221,7 +221,7 @@
                             corporis nemo culpa dolorum! Laborum at eos deleniti
                             consequatur itaque officiis debitis quisquam! Provident!
                         </p>
-                        <aside class="post_inset line-container">
+                        <aside class="post_inset post_inset__right line-container">
                             <div class="line-container_body pull-quote">
                                 <div class="pull-quote_body">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -266,6 +266,32 @@
                             consequatur itaque officiis debitis quisquam! Provident!
                         </p>
                         <aside class="post_inset line-container">
+                            <div class="line-container_body pull-quote pull-quote__large">
+                                <div class="pull-quote_body">
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                                    corporis nemo culpa dolorum!
+                                </div>
+                                <footer>
+                                    <cite class="pull-quote_citation">
+                                        - Author Name
+                                    </cite>
+                                </footer>
+                            </div>
+                        </aside>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cum corrupti tempora nam nihil qui mollitia consectetur
+                            corporis nemo culpa dolorum! Laborum at eos deleniti
+                            consequatur itaque officiis debitis quisquam! Provident!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Cum corrupti tempora nam nihil qui mollitia consectetur
+                            corporis nemo culpa dolorum! Laborum at eos deleniti
+                            consequatur itaque officiis debitis quisquam! Provident!
+                        </p>
+                        <aside class="post_inset post_inset__right line-container">
                             <h2 class="line-container_pullup header-slug">
                                 <span class="header-slug_inner">
                                     More information
