Testing ie and a11y fix for tags.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -402,6 +402,7 @@
                             <ul class="tags_list">
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         Students
                                     </a>
                                 </li>
