Final tags tweaks for ie and accessibility.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -408,41 +408,49 @@
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         Consumers
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         College loans
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         Students
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         Consumers
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         College loans
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         Students
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         Consumers
                                     </a>
                                 </li>
                                 <li class="tags_tag">
                                     <a href="#" class="tags_link">
+                                        <span class="tags_bullet" aria-hidden="true">&bull;</span>
                                         College loans
                                     </a>
                                 </li>
