Changes post_summary to post_dek and tweaks styles.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -91,6 +91,13 @@
                         <h1 class="post_header">
                             A consumer-centered supervision program
                         </h1>
+                        <p class="post_dek">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Quis architecto commodi cupiditate excepturi
+                            consequatur sequi quia consectetur est ea laborum
+                            saepe earum quidem a necessitatibus modi magni error
+                            ab suscipit.
+                        </p>
                         <div class="post_meta">
                             <span class="post_byline">
                                 By <a href="#">Firstname&nbsp;Lastname</a> &ndash;
@@ -126,17 +133,6 @@
                             </li>
                         </ul>
                         <img class="post_featured-img" src="http://placekitten.com/740/410" alt="alt text">
-                        <div class="line-container">
-                            <div class="line-container_body">
-                                <p class="post_summary">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing
-                                    elit. Quis architecto commodi cupiditate excepturi
-                                    consequatur sequi quia consectetur est ea laborum
-                                    saepe earum quidem a necessitatibus modi magni error
-                                    ab suscipit.
-                                </p>
-                            </div>
-                        </div>
                     </header>
                     <div class="post_body">
                         <aside class="post_inset post_inset__right line-container">
