Updates cat slug bottom margin.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -82,7 +82,7 @@
             <div class="wrapper">
                 <div class="hero_card">
                     <div class="hero_card-inner">
-                        <a href="#" class="category-slug meta-header_left">
+                        <a href="#" class="category-slug">
                             <span class="cf-icon cf-icon-help"></span>
                             <span class="visually-hidden">Category:</span>
                             Announcements &amp; updates
