First pass at hero bg's.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -95,6 +95,16 @@
                     </div>
                 </div>
             </div>
+            <div class="hero_img-container hero_img-container__small">
+                <div class="hero_img"
+                     style="background-image:url(../static/img/hero-small.png);">
+                </div>
+            </div>
+            <div class="hero_img-container hero_img-container__large">
+                <div class="hero_img"
+                     style="background-image:url(../static/img/hero-large.png);">
+                </div>
+            </div>
         </section>
         <div class="content_outer-wrapper">
             <div class="wrapper content_wrapper">
