--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -95,8 +95,8 @@
                     </div>
                 </div>
             </div>
-            <div class="hero_img-container hero_img-container__small">
-                <div class="hero_img"
+            <div class="hero_img-container hero_img-container__small u-flexible-container">
+                <div class="hero_img u-flexible-container_inner"
                      style="background-image:url(../static/img/hero-small.png);">
                 </div>
             </div>
