Adds custom bg color to hero.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -78,7 +78,7 @@
     </header><!-- END .header -->
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
-        <section class="content_hero hero">
+        <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="wrapper">
                 <div class="hero_card">
                     <div class="hero_card-inner">
