--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -81,17 +81,19 @@
         <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="wrapper">
                 <div class="hero_card">
-                    <div class="hero_card-inner">
-                        <a href="#" class="category-slug">
-                            <span class="cf-icon cf-icon-help"></span>
-                            <span class="visually-hidden">Category:</span>
-                            Announcements &amp; updates
-                        </a>
-                        <a class="summary" href="#">
-                            <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
-                            <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
-                            <p class="summary_byline">By Patrice Ficklin</p>
-                        </a>
+                    <div class="hero_card-bg">
+                        <div class="hero_card-padding">
+                            <a href="#" class="category-slug">
+                                <span class="cf-icon cf-icon-help"></span>
+                                <span class="visually-hidden">Category:</span>
+                                Announcements &amp; updates
+                            </a>
+                            <a class="summary" href="#">
+                                <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
+                                <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
+                                <p class="summary_byline">By Patrice Ficklin</p>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
