Simplifies line-container.

--- a/blog_static/post.html
+++ b/blog_static/post.html
@@ -287,13 +287,13 @@
                             corporis nemo culpa dolorum! Laborum at eos deleniti
                             consequatur itaque officiis debitis quisquam! Provident!
                         </p>
-                        <aside class="post_inset post_inset__right line-container">
-                            <h2 class="line-container_pullup header-slug">
-                                <span class="header-slug_inner">
-                                    More information
-                                </span>
-                            </h2>
+                        <aside class="post_inset post_inset__right line-container line-container__no-top">
                             <div class="line-container_body">
+                                <h2 class="header-slug">
+                                    <span class="header-slug_inner">
+                                        More information
+                                    </span>
+                                </h2>
                                 <ul class="list list__unstyled">
                                     <li class="list_item list_item__spaced">
                                         <a class="list_link" href="#">
