--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -225,7 +225,7 @@
                     </a>
                     <a class="btn pagination_next" href="#">
                         Next
-                        <span class="btn-icon-right cf-icon cf-icon-right"></i>
+                        <span class="btn-icon-right cf-icon cf-icon-right"></span>
                     </a>
                     <form class="pagination_form">
                         <label class="pagination_label" for="pagination_current-page">
