Some basic form stuff.

--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -115,7 +115,7 @@
         <div class="wrapper content_wrapper">
             <section class="content_main">
 
-                <div class="filters">
+                <div class="post-preview-filters">
                     <div class="expandable">
                         <div class="expandable_header">
                             <!-- <h5>Blog filtered by</h5>
