--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hero_img-container hero_img-container__small">
+            <!-- <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
                      style="background-image:url(../static/img/hero-small.png);">
                 </div>
@@ -106,7 +106,7 @@
                 <div class="hero_img"
                      style="background-image:url(../static/img/hero-large.png);">
                 </div>
-            </div>
+            </div> -->
         </section><!-- END .content_hero -->
 
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
