--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -80,7 +80,7 @@
 
         <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="wrapper">
-                <!-- <div class="hero_card">
+                <div class="hero_card">
                     <div class="hero_card-bg">
                         <div class="hero_card-padding">
                             <a href="#" class="category-slug">
@@ -95,7 +95,7 @@
                             </a>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
