--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -49,10 +49,6 @@
     the head, then file an issue or PR to discuss including it.
 -->
 
-<!--[if lt IE 9]>
-    <script src="../static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
-<![endif]-->
-
     <script>
         // Confirm availability of JS and remove no-js class from html
         var docElement = document.documentElement;
@@ -110,7 +106,7 @@
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
-        <div class="content_hero hero" style="background-color:#337E7D;">
+        <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="hero_wrapper">
                 <div class="hero_card">
                     <div class="hero_card-bg">
@@ -139,7 +135,7 @@
                      style="background-image:url(../static/img/hero-large.png);">
                 </div>
             </div>
-        </div><!-- END .content_hero -->
+        </section><!-- END .content_hero -->
 
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
         <div class="content_bar"></div>
