--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -49,6 +49,10 @@
     the head, then file an issue or PR to discuss including it.
 -->
 
+<!--[if lt IE 9]>
+    <script src="../static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
+<![endif]-->
+
     <script>
         // Confirm availability of JS and remove no-js class from html
         var docElement = document.documentElement;
