--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -128,6 +128,7 @@
                         </div>
                     </div>
                 </div>
+                <div class="hero_card"></div>
             </div>
             <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
