--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -111,7 +111,7 @@
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
         <section class="content_hero hero" style="background-color:#337E7D;">
-            <div class="hero_wrapper">
+            <div class="wrapper">
                 <div class="hero_card">
                     <div class="hero_card-bg">
                         <div class="hero_card-padding">
@@ -128,7 +128,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero_card"></div>
             </div>
             <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
