--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -110,7 +110,7 @@
 
     <main class="content content__2-1 content__bleedbar" id="main" role="main">
 
-        <section class="content_hero hero" style="background-color:#337E7D;">
+        <!-- <section class="content_hero hero" style="background-color:#337E7D;">
             <div class="wrapper">
                 <div class="hero_card">
                     <div class="hero_card-bg">
@@ -139,7 +139,7 @@
                      style="background-image:url(../static/img/hero-large.png);">
                 </div>
             </div>
-        </section><!-- END .content_hero -->
+        </section> --><!-- END .content_hero -->
 
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
         <div class="content_bar"></div>
