--- a/blog_static/landing.html
+++ b/blog_static/landing.html
@@ -114,7 +114,7 @@
             <div class="wrapper">
                 <div class="hero_card">
                     <div class="hero_card-bg">
-                        <div class="hero_card-padding">
+                        <!-- <div class="hero_card-padding">
                             <a href="#" class="category-slug">
                                 <span class="cf-icon cf-icon-help"></span>
                                 <span class="visually-hidden">Category:</span>
@@ -125,11 +125,11 @@
                                 <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                                 <p class="summary_byline">By Patrice Ficklin</p>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
-            <!-- <div class="hero_img-container hero_img-container__small">
+            <div class="hero_img-container hero_img-container__small">
                 <div class="hero_img"
                      style="background-image:url(../static/img/hero-small.png);">
                 </div>
@@ -138,7 +138,7 @@
                 <div class="hero_img"
                      style="background-image:url(../static/img/hero-large.png);">
                 </div>
-            </div> -->
+            </div>
         </section><!-- END .content_hero -->
 
         <!-- .content_bar must come after .content_hero but before .content_wrapper -->
